src/codegen/snapshots/hebi__codegen__tests__class_derived_with_field_and_closure_method.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
u := 0
class T(U):
  v = 0
  fn test(self):
    print self.v, u


# Func:
function `T.test` (registers: 2, length: 14, constants: 2)
.code
  0  | load_self
  1  | load_field [0]; v
  3  | store r0
  5  | load_global [1]; u
  7  | store r1
  9  | print_n r0, 2
  12 | load_none
  13 | return


function `main` (registers: 3, length: 18, constants: 4)
.code
  0  | load_smi 0
  2  | store_global [0]; u
  4  | load_global [2]; U
  6  | store r1
  8  | load_smi 0
  10 | store r2
  12 | make_data_class_derived [1], r1; <class `T` descriptor>
  15 | store_global [3]; T
  17 | return



