src/codegen/snapshots/hebi__codegen__tests__class_derived_with_multiple_fields.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
class T(U):
  a = 0
  b = 1


# Func:
function `main` (registers: 4, length: 18, constants: 3)
.code
  0  | load_global [1]; U
  2  | store r1
  4  | load_smi 0
  6  | store r2
  8  | load_smi 1
  10 | store r3
  12 | make_data_class_derived [0], r1; <class `T` descriptor>
  15 | store_global [2]; T
  17 | return




